<resources>
    <string name="app_name">UTair</string>
    <string name="help">Справка</string>
    <string name="depart_direction">Туда</string>
    <string name="arrive_direction">Обратно</string>
    <string name="find_flights">Найти рейсы</string>
    <string name="where_from">Откуда</string>
    <string name="where">Куда</string>


    <string name="fontOpenSansLight">fonts/OpenSans-Light.ttf</string>
    <string name="fontOpenSansRegular">fonts/OpenSans-Regular.ttf</string>
    <string name="fontOpenSansSemibold">fonts/OpenSans-Semibold.ttf</string>
    <string name="fontOpenSansBold">fonts/OpenSans-Bold.ttf</string>
    <string name="fontRobotoMedium">fonts/Roboto-Medium.ttf</string>
    <string name="city_selection">Выбор города</string>
    <string name="input_your_city">Введите название вашего города</string>
    <string name="no_network_message">Проверьте подключение к интернету</string>
    <string name="max_passenger_count_message">Пассажиров должно быть не более %d человек</string>
    <string name="babies_less_adults_message">Младенцев не должно быть больше, чем взрослых</string>
    <string name="depart_city_is_empty_message">Введите пункт отправления</string>
    <string name="arrive_city_is_empty_message">Введите пункт назначения</string>

</resources>
